--- a/package.json
+++ b/package.json
@@ -1,15 +1,14 @@
 {
-  "dependencies": {
-    "nodemon": "^3.1.0"
-  },
-  "name": "day7",
+  "name": "day8",
   "version": "1.0.0",
-  "main": "script.js",
+  "description": "",
+  "main": "server-side-script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
-    
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "dependencies": {
+    "nodemon": "^3.1.0"
+  }
 }
