--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "day8",
+  "name": "day10",
   "version": "1.0.0",
   "description": "",
-  "main": "server-side-script.js",
+  "main": "script.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"nodemon script.js"
   },
   "author": "",
   "license": "ISC",
